--- a/1.html
+++ b/1.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    dfgsdgfdsg
  <img src="/syrot" alt="картинка не найдена">
  <img src="syrot" alt="картинка не найдена">    
     </body>
