--- a/1.html
+++ b/1.html
@@ -8,6 +8,6 @@
 </head>
 <body>
  <img src="/syrot" alt="картинка не найдена">
- <img src="syrot" alt="картинка не найдена">    
+ <img src="/syrot" alt="картинка не найдена">    
     </body>
 </html>
