--- a/1.html
+++ b/1.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    fgchcfghcfg
- <img src="/syrot" alt="картинка не найдена">
- <img src="/syrot" alt="картинка не найдена">    
+ <h3>Изображение дерево</h3>    
+ <img src="./syrot" alt="картинка не найдена">
+ <h3>Изображение компьютера</h3>
+<img src="https://avatars.mds.yandex.net/i?id=1122a37de56ef22ecc247786ef54544dba4210b2-4507927-images-thumbs&n=13" alt="компьютер">
+
     </body>
 </html>
