--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-<ul>
-    <li>Adil</li>
-    <li>Rostik
-
-    <li>
-    <ol>
-     <li>html</li>
-     <li>css</li>   
-    </ol>
-    </li>
-    
-    <li>Vadim</li>
-</ul>
+ <table>
+    <tr>
+      <th>Dobryy den</th>
+      <th>Dobryy den</th>
+      <th>Dobryy den</th>  
+    </tr>
+    <tr>
+     <td>Adil</td>
+     <td>Rosik</td>
+     <td>Vadim</td>   
+    </tr>
+ </table>   
 </body>
 </html>
