--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
 </head>
 <body>
  <table>
-    <tr>
-      <th>Dobryy den</th>
-      <th>Dobryy den</th>
-      <th>Dobryy den</th>  
-    </tr>
-    <tr>
-     <td>Adil</td>
-     <td>Rosik</td>
-     <td>Vadim</td>   
-    </tr>
- </table>   
+ <form action="" method=""></form>
+ <input type="text" name="" id="">  
 </body>
 </html>
