--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
  <table>
- <form action="" method=""></form>
- <input type="text" name="" id="">  
+ <form action="" method="">
+ <label for="">Ваше имя</label>
+ <input type="text" name="" id="имя">
+ <p>Пароль</p>
+ <input type="password" placeholder="пароль" name="" id="">
+ <br>
+ <input type="email" name="" id="" value="email@email.com">
+ <br>
+ <input type="submit" value="Отправь пожалуйста">
+ <!-- <button type="submit">Отправить</button> -->
+</form>  
 </body>
 </html>
