text-checkbox html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,28 @@
  <br>
  <input type="email" name="" id="" value="email@email.com">
  <br>
+ <p>Описание</p>
+ <textarea name="" id="" cols="20" rows="10"></textarea>
+ <br>
+ <p>Выберите свой любимый цвет</p>
+ <input type="radio" name="name" id="" value="красный">Красный
+ <input type="radio" name="name" id="" value="зеленый">Зеленый
+ <input type="radio" name="name" id="" value="черный" >Черный
+ <br>
+ <p>Выберите свой любимый цвет</p>
+ <input type="checkbox" name="мойцвет" id="" checked value="красный">Красный
+ <input type="checkbox" name="мойцвет" id="" value="зеленый">Зеленый
+ <input type="checkbox" name="мойцвет" id="" value="черный">Черный
+ <p>Выберите свой любимый цвет</p>
+ <select name="цвета" id="">
+    <option value="красный">Красный</option>
+    <option value="зеленый ">Зеленый<option>
+    <option value="черный">Черный</option>
+
+ </select>
+ <br>
+ <br>
  <input type="submit" value="Отправь пожалуйста">
- <!-- <button type="submit">Отправить</button> -->
 </form>  
 </body>
 </html>
