вставить ссылку в картинку

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Моя веб страница</title>
+    <meta charset="utf-8">
 </head>
 <body>
-    
+ 
+<p><a target="_blank" href="https://www.youtube.com/watch?v=xK04R0-v_xA"> <img src="./images.jpg" alt="SimpleCode" width="180" ></a></p>
+
+<p><a href="images.rar">Архив </a></p>
+<p><a href="page_1.html">PAGE_1 </a></p>
 </body>
-</html>
+<html>
