ссылка через фото

--- a/polnyi kurs.html
+++ b/polnyi kurs.html
@@ -8,9 +8,35 @@
     <title>Document</title>
 </head>
 </body>
+<a href="https://symbolhunt.com/netherlands/national-tree/"><img src="./Изображение/монитор.webp" width="200" alt=""></a>
+<h1 id="top">Верхняя часть страницы</h1>
+<a href="about.html">О нас</a>
+<!--Привет всем-->
+<!--Изображение 1 --> 
  <h3>Изображение дерево</h3>
-<img src="изображение 1.jpg" width="560"  alt="картинка не найдена">
-<h3>Монитор с подсветкой</h3>
-<img src="./монитор.webp " width="560" alt="изображение монитора">
+<img src="./Изображение/изображение 1.jpg" width="560"  alt="картинка не найдена">
+<a href="https://symbolhunt.com/netherlands/national-tree/" target="_blank">Узнай больше о национальном дереве Голландии</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>какой-то текст</p>
+<a href="#top">Назад вверх</a>
 </body>
 </html>
