--- a/polnyi kurs.html
+++ b/polnyi kurs.html
@@ -8,35 +8,37 @@
     <title>Document</title>
 </head>
 </body>
-<a href="https://symbolhunt.com/netherlands/national-tree/"><img src="./Изображение/монитор.webp" width="200" alt=""></a>
-<h1 id="top">Верхняя часть страницы</h1>
-<a href="about.html">О нас</a>
-<!--Привет всем-->
-<!--Изображение 1 --> 
- <h3>Изображение дерево</h3>
-<img src="./Изображение/изображение 1.jpg" width="560"  alt="картинка не найдена">
-<a href="https://symbolhunt.com/netherlands/national-tree/" target="_blank">Узнай больше о национальном дереве Голландии</a>
+<form action="" method="">
+    <label for="Имя">Ваша имя</label>
+<input type="text" name="name" id=" Имя">
+<p>Пароль</p>
+<input type="password" placeholder="пароль" name="" id="">
 <br>
+<input type="email" name="" id="" value="email@email.com">
 <br>
+<p>Описание</p>
+<textarea name="" id="" cols="20" rows="10"></textarea>
 <br>
+<p>Выберите свой любымый цвет</p>
+<input type="radio" name="цвет" id="" value="красный
+">Красный
+<input type="radio" name="цвет" id="" value="Зеленый">Зеленый
+<input type="radio" name="цвет" id="" value="черный">Черный
 <br>
+<p>Выберите свой любымый цвет</p>
+<input type="checkbox" name="мой цвет" checked id=""value="красный">Красный
+<input type="checkbox" name="мой цвет" id="" value="Зеленый">Зеленый
+<input type="checkbox" name="мой цвет" id="" value="черный">Черный
+<p>Выберите свой любымый цвет</p>
+<select name="цвета" id=""><option value="">
+    <option value="красный">Красный</option>
+    <option value="зеленый">Зеленый</option>
+    <option value="черный">Черный</option>
+    <br>
+<select>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p>какой-то текст</p>
-<a href="#top">Назад вверх</a>
+<input type="submit" value="Отправь пожалуйста">
+<!--button type="submit">Отправить</button> -->
+</form>
 </body>
 </html>
