--- a/polnyi kurs.html
+++ b/polnyi kurs.html
@@ -8,37 +8,6 @@
     <title>Document</title>
 </head>
 </body>
-<form action="" method="">
-    <label for="Имя">Ваша имя</label>
-<input type="text" name="name" id=" Имя">
-<p>Пароль</p>
-<input type="password" placeholder="пароль" name="" id="">
-<br>
-<input type="email" name="" id="" value="email@email.com">
-<br>
-<p>Описание</p>
-<textarea name="" id="" cols="20" rows="10"></textarea>
-<br>
-<p>Выберите свой любымый цвет</p>
-<input type="radio" name="цвет" id="" value="красный
-">Красный
-<input type="radio" name="цвет" id="" value="Зеленый">Зеленый
-<input type="radio" name="цвет" id="" value="черный">Черный
-<br>
-<p>Выберите свой любымый цвет</p>
-<input type="checkbox" name="мой цвет" checked id=""value="красный">Красный
-<input type="checkbox" name="мой цвет" id="" value="Зеленый">Зеленый
-<input type="checkbox" name="мой цвет" id="" value="черный">Черный
-<p>Выберите свой любымый цвет</p>
-<select name="цвета" id=""><option value="">
-    <option value="красный">Красный</option>
-    <option value="зеленый">Зеленый</option>
-    <option value="черный">Черный</option>
-    <br>
-<select>
-<br>
-<input type="submit" value="Отправь пожалуйста">
-<!--button type="submit">Отправить</button> -->
-</form>
+<li><a href="2index.html"> Назад</a></li>
 </body>
-</html>
+<html>
