--- a/10.html
+++ b/10.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles10.css">
     <title>Document</title>
 </head>
+
 <body>
-    <table border="1" cellspacing="">
-<tr>
-<td colspan="3">ячейка1</td>
-<!--<td>ячейка 2</td>-->
-<!--<td>ячейка 3</td>-->
-</tr>
-
-<tr>
-<td>ячейка4</td>
-<td rowspan="2">ячейка5</td>
-<td>ячейка6</td>
-</tr>
-
-<tr>
-<!--<td>ячейка 7</td>-->
-<td>ячейка8</td>
-<td>ячейка9</td>
-</tr>
+    <div class="container">
 
 
+        <div class="men">
+            Primary
+        </div>
+        <div class="men1">
+            Secondary
+        </div>
+        <div class="men2">
+            Success
+        </div>
 
-    </table>  
-    
+    </div>
+
+
+    <div class="container1">
+        <div class="men3">
+            Danger
+        </div>
+        <div class="men4">
+            Warning
+        </div>
+        <div class="men5">
+            Info
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 </body>
+
 </html>
