--- a/5.html
+++ b/5.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles5.css">
+    <title>Мобильное приложение</title>
 </head>
+
 <body>
-    <table border="1" >
-        <tr>
-            <td>ячейка 1</td>
-            <td>ячейка 2</td>
-            <td>ячейка 3</td>
-        </tr>
-
-<tr>
-<td>ячейка 4</td>
-<td>ячейка 5</td>
-<td>ячейка6</td>
-</tr>
-
-<tr>
-<td>ячейка7</td>
-<td>ячейка8</td>
-<td>ячейка9</td>
-</tr>
 
 
+    <div class="main">
+
+        <div class="container">
+
+            <div class="header-logo">Лого</div>
+
+            <div class="header-inner">
+                <div class="header-cont">
+                    <div class="header-title">Мы разрабатываем мобильное приложение</div>
+
+                    <div class="header-btn">
+                        <a href="#">подробнее</a>
+                    </div>
+                </div>
+                <div class="phone">
+                    <img class="iphone-1" src="изображение/png1.png" alt="">
+                    <img class="iphone-2" src="изображение/png2.png" alt="">
 
 
+                </div>
+
+            </div>
 
 
+        </div>
 
-
-
-
-
-
-
+    </div>
 
 
 
 
-    </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
