--- a/6.html
+++ b/6.html
@@ -1,41 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles6.css">
     <title>Document</title>
 </head>
+
 <body>
-    <table border="1" cellspacing="0" cellpadding="0" width="400" height="200">
-<tr>
-<th>ячейка 1</th>
-<th>ячейка 2</th>
-<th>ячейка 3</th>
-</tr>
+    <div class="container1">
+        <div class="sozdor">
 
- <tr>
-<td>ячейка4</td>
-<td>ячейка7</td>
-<td>ячейка6</td>
- </tr>
+            <div class="dom">
+                <button><a href="/1.html">Home</button></a>
+            </div>
+            <div><a href="#">Features</div></a>
+            <div><a href="#"> Pricing</div></a>
+            <div><a href="#">FAQs</div></a>
+            <div><a href="#">About</div></a>
 
-<tr>
-<td>ячейка7</td>
-<td>ячейка8</td>
-<td>ячейка9</td>
-</tr>
+        </div>
+    </div>
 
 
 
 
-
-
-
-
-
-
-    </table>
 
 
 
@@ -44,4 +33,5 @@
 
 
 </body>
+
 </html>
