--- a/3.html
+++ b/3.html
@@ -5,66 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-<h2>Списки</h2>
-
-<h3>Список цветов</h3>
-<ul>
-<li>Красный</li>
-<li>Желтый</li>
-<li>Зеленый</li>
-<li>Синий</li>
-</ul>
-<h2>Список студентов</h2>
-<ol>
-<li>Иванов</li>
-<li>Петров</li>
-<li>Сидоров</li>
-<li>Николаев</li>
-</ol>
-<h3>Список студентов</h3>
-
-<ol>
-<li>Иванов</li>
-<ul>
-    <li>Возраст-23года</li>
-    <li>Курс-3</li>
-</ul>
-<li>Петров</li>
- <ul>
-    <li>Возраст-19</li>
-    <li>Курс-3</li>
-</ul>
-
-<li>Сидоров</li>
-<ul>
-<li>Возраст-18</li>
-<li>Курс-1</li>
-</ul>
-</ol>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="container">
+        <div class="s">            
+            <div class="red"></div>
+            <div class="yellow"></div>
+        </div>
+            
+        <div class="blue"></div>
+    </div>
 
 </body>
 </html>
