--- a/4.html
+++ b/4.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles4.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="header">
+
+        <div class="nav">
+
+            <a class="nav-item" href="#">Главная</a>
+            <a class="nav-item" href="#">Новости</a>
+            <a class="nav-item" href="#">О нас</a>
+            <a class="nav-item" href="#">Контакты</a>
+        </div>
+
+        <div class="main">
+            <div class="title">Вы давно мечтали побывать в Швейцарии</div>
+            <div class="subtitle">
+                Мы поможем осуществить вашу мечту
+            </div>
+
+            <div class="forma">
+                <form action="" method>
+                    <input type="text" class="input" placeholder="Введите ваш номер телефона">
+
+                </form>
+
+            </div>
+<div class="button">
+    <a href="" class="btn">Заказать обратный звонок</a>
+
+</div>
+        </div>
+    </div>
+
+
+
 </body>
-</html>
 
-<h1><b>Что нужно знать, чтобы делать сайты</b></h1>
-<ol>
-<li><b>HTML</b></li>
-<li>CSS</li>
-<li>PHP</li>
-<li>SQL</li>
-<li>JavaScript</li>
-<li>jQueri</li>
-<li>Flash</li>
-<li>SEO</li>
-</ol>
-
-<h2>PHP и JavaScript</h2>
-<p>Языки программирования <b>PHP</b> и <b>JavaScript</b> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер</p>
-
-
-<h2>Виды скриптов</h2>
-<p>Для этого пишутся скрипты (англ.<i>script</i> script - «сценарий») - программы, позволяющиее реагировать на действия пользователя. Скрипты бывают двух видов:</p>
-
-<ul>
-<li>те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке    <b>PHP</b>. На нем пишуться <b>CMS-ки</b>– системы управления контентом.
-</li>
-<li>те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке       <b>JavaScript</b>JavaScript. Они чаще всего используются для, того чтобы сделать страницу более удобной и красивой.</li>
-</ul>
-</body>
 </html>
